--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/Engine.CollisionProfile]
-+Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles",bCanModify=True)
++Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for Projectiles",bCanModify=True)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
@@ -22,12 +22,12 @@ MinimumiOSVersion=IOS_11
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPerson",NewGameName="/Script/TestingGrounds")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/TestingGrounds")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/TestingGrounds")
-+ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/TestingGrounds")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="TestingGroundsProjectile")
++ActiveGameNameRedirects=(OldGameName="/Script/ThirdPerson",NewGameName="/Script/TestingGrounds")
++ActiveGameNameRedirects=(OldGameName="ThirdPerson",NewGameName="/Script/TestingGrounds")
++ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="Projectile")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonHUD",NewClassName="TestingGroundsHUD")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="TestingGroundsGameMode")
-+ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="TestingGroundsCharacter")
++ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="FirstPersonCharacter")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
