Dynamically Calculating NavMesh

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -69,7 +69,7 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOu
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Static/Levels/FirstPersonExampleMap.FirstPersonExampleMap
+EditorStartupMap=/Game/Dynamic/Levels/FirstPersonExampleMap.FirstPersonExampleMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -78,9 +78,10 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Static/Levels/FirstPersonExampleMap.FirstPersonExampleMap
+GameDefaultMap=/Game/Dynamic/Levels/FirstPersonExampleMap.FirstPersonExampleMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Dynamic/InfiniteTerrainGameMode.InfiniteTerrainGameMode_C
 GlobalDefaultServerGameMode=None
 
-
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
