Fixing DirectX API crashes on standalone play.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,7 @@ ProjectName=First Person Template
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=86A06BF44D529DF7CB3571B82D832E31
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+
