--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -142,3 +142,6 @@ GlobalDefaultServerGameMode=None
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
 
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
+
