--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -134,7 +134,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Dynamic/Levels/FirstPersonExampleMap.FirstPersonExampleMap
+GameDefaultMap=/Game/Dynamic/Levels/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Dynamic/BP_InfiniteTerrainGameMode.BP_InfiniteTerrainGameMode_C
 GlobalDefaultServerGameMode=None
